--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0",
     "web-vitals": "^2.1.4"
