--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "class-variance-authority": "^0.7.1",
-    "framer-motion": "^12.23.2",
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.300",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0",
+    "use-sound": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
